app/components/Button/Button.module.scss
@import '../../styles/variables';

.button {
    color: $light-bg;
    background-color: $text;
    padding: 20px;
    border: none;
    text-decoration: none;
    font-size: $fs-300;
    text-transform: uppercase;
    font-weight: 600;
    cursor: pointer;
    display: inline-block;
    transition: all .3s ease-in-out;

    &:hover {
        background-color: $dark-bg;
    }
}

